src/objects/BDR__c.object
<CustomObject>
    <description>The entry point for a defined business relationship related to a set of service proposals, funding proposals and contracts. The BDR can be linked to multiple services, but at present only one Income Block.</description>
    <fields>
        <fullName>A2D_Locality__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>A2D Locality</description>
        <inlineHelpText>Select the Locality</inlineHelpText>
        <label>Locality</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BDR_Organisation__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Locality</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BDR_Organisation__c</referenceTo>
        <relationshipLabel>BDRs</relationshipLabel>
        <relationshipName>BDRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Value__c</fullName>
        <description>The actual value of the BDR. This is used to drive the delegated approval levels</description>
        <label>Actual Value</label>
        <summarizedField>Income_Block__c.Total_Amount__c</summarizedField>
        <summaryForeignKey>Income_Block__c.BDR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Any_redundancies__c</fullName>
        <inlineHelpText>describe if this proposal has the potential to incur redundancies.  This may be because of staff restructuring, or because of a potential loss of funding</inlineHelpText>
        <label>Redundancy Implications</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Area_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who is the responsible ROM</inlineHelpText>
        <label>Regional Operations Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>Area Management</value>
            </filterItems>
            <infoMessage>Regional Operations Manager</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Development_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <description>This uses the new A2D_Locality Table to derive Area, which represents the new A2D data. 

FOR REFERENCE :
This formula references the Org Table
IF( CONTAINS(Locality__r.Name, &quot;Locality&quot;) , Locality__r.Parent.Name , 
IF(CONTAINS(Locality__r.Name,&quot;Area&quot;), Locality__r.Name, 
IF(CONTAINS(Locality__r.Name, &quot;Region&quot;), Locality__r.Name, 
IF(CONTAINS(Locality__r.Name, &quot;Local Service Office&quot;), Locality__r.Parent.Parent.Name, 
&quot;&quot;))))</description>
        <formula>A2D_Locality__r.Area__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BDM</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>BDM</value>
            </filterItems>
            <infoMessage>Select the BDM or enter a different user name if none exists</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>BDRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BDR_Name__c</fullName>
        <description>The Name of the BDR</description>
        <inlineHelpText>The BDR name should begin with the Area abbreviation (see user guide), followed by the service name and then town or geographical area</inlineHelpText>
        <label>BDR Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bid_Feedback_Detail__c</fullName>
        <description>More detail about the reasons a bid or tender was not successful</description>
        <inlineHelpText>Provide some detail about the reasons a bid or tender was not successful</inlineHelpText>
        <label>Feedback Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bid_Feedback__c</fullName>
        <description>The primary factor a contract or tender was not successful</description>
        <inlineHelpText>The primary factor a contract or tender bid was not successful</inlineHelpText>
        <label>External Feedback</label>
        <picklist>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price/Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strong Competition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capacity to Deliver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bid_Sign_Off_Deadline__c</fullName>
        <inlineHelpText>This is the latest possible date when you need all Alzheimer’s Society approvers to have approved your proposal on the system (usually around a week before you need to submit your tender)</inlineHelpText>
        <label>Bid Sign Off Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bid_Status__c</fullName>
        <label>Bid Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Successful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsuccessful</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bid_Submission_Deadline__c</fullName>
        <inlineHelpText>Make sure you plan to submit at least a day or two before the official deadline in order leave enough time for potential problems with the submission process/portal</inlineHelpText>
        <label>Bid Submission Deadline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Clarification_Questions_Deadline__c</fullName>
        <description>Deadline for questions on a formal tender</description>
        <label>Clarification Questions Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Component_List__c</fullName>
        <description>An internal field that stores a single character for each component that is part of the BDR. Makes it easy to show which BDRs have which components in a list view</description>
        <label>Components</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Centre__c</fullName>
        <formula>A2D_Locality__r.Cost_Centre__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost_Centre</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Risks__c</fullName>
        <inlineHelpText>Describe how the service will be managed, premises details, IT requirements, etc – and whether this is already in place or will require implementation</inlineHelpText>
        <label>Infrastructure/Capacity to deliver</label>
        <length>16384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Development_Type__c</fullName>
        <inlineHelpText>Choose New if service is brand new, Remodelling if renewing service/s with changes, Extension on existing if renewing service/s with no changes.  If service is existing and funded through VI, choose Extension on existing</inlineHelpText>
        <label>Development Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remodelling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extension on existing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Duration__c</fullName>
        <description>Estimation Duration in months</description>
        <inlineHelpText>Estimated Duration in months</inlineHelpText>
        <label>Estimated Duration (Mnths)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exit_Strategy__c</fullName>
        <inlineHelpText>Include reputation risk, redundancy of staff, lack of other available services, pressure from commissioners, press, councillors etc.</inlineHelpText>
        <label>Impact if proposal is declined</label>
        <length>16384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fiscal_Years__c</fullName>
        <inlineHelpText>Choose all part and complete financial years over which the service is intended to run.</inlineHelpText>
        <label>Financial Years</label>
        <picklist>
            <picklistValues>
                <fullName>2012/13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013/14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014/15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016/17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017/18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018/19</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Fixed_Tender_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is an amount specified by the commissioner or fund source</description>
        <inlineHelpText>Tick if funding available is a fixed amount</inlineHelpText>
        <label>Fixed Tender Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HR_Advisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HR Advisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BDRHRAdvisor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HR_Implications__c</fullName>
        <inlineHelpText>Tick this box if any of these may apply:  Recruitment – will need to recruit staff and/or volunteer; Redundancy – may need to make redundancies (as described above), TUPE – a tender requires existing staff to transfer to a new provider</inlineHelpText>
        <label>HR Implications</label>
        <picklist>
            <picklistValues>
                <fullName>Recruitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redundancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TUPE</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>HR_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The HR Manager for the Region linked to this BDR</description>
        <label>zzHR Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BDR_HR_Managers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IT_Implications__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please tick box if this proposal has specific IT requirements, eg. Non-standard IT equipment, secure email, etc</inlineHelpText>
        <label>IT Implications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InBudget__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specify whether the business is budgeted</description>
        <inlineHelpText>Tick if is this business in current budget plans (no tick means NOT in Budget)</inlineHelpText>
        <label>zzIn Budget?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Income_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Funder comes from the Organisations table.</description>
        <inlineHelpText>Use lookup box to choose appropriate potential funder. If the funder is not listed, save your BDR, then go to Organisations to add them. If no funding has been identified, leave blank.</inlineHelpText>
        <label>Income Source</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>BDRs (Income Source)</relationshipLabel>
        <relationshipName>Business_Development_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Intended_Start_Date__c</fullName>
        <description>The intended start date for the Income. This will be used to calculate the Financial Years</description>
        <inlineHelpText>Enter your best estimate of the Intended Start Date. (This will be used to calculate the Financial Years)</inlineHelpText>
        <label>Intended Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Linked_BDR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of a BDR to which this BDR is linked. The link may be an extension or variation. Store the ID of the old BDR on the new BDR. This field should not be displayed to the user. A similar value should be stored on the Contract object</description>
        <label>Linked BDR</label>
        <referenceTo>BDR__c</referenceTo>
        <relationshipName>Linked_BDRS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Locality_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Locality Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BDRLocalityManager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Locality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>zzArea or Locality</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <errorMessage>This organisation is not an area or locality</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Internal Organisation</value>
            </filterItems>
            <filterItems>
                <field>Account.Name</field>
                <operation>contains</operation>
                <value>Locality</value>
            </filterItems>
            <filterItems>
                <field>Account.Name</field>
                <operation>contains</operation>
                <value>Area</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>BDRs (Area or Locality)</relationshipLabel>
        <relationshipName>BDRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notification_Action__c</fullName>
        <description>Set to Y to trigger pending notifications in the Notifications Pending list. The field will be reset by a method in the trigger on BDR__c once the pending notifications list is empty</description>
        <label>Notification Action</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notifications_Pending__c</fullName>
        <description>A list, semi-colon separated, indicating the notifications pending. This will include both those computed from the form and those requested by the user as additional notifications.</description>
        <label>Notifications Pending</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operations_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operations Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BDR_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operations_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who is the responsible Operations Manager</inlineHelpText>
        <label>Operations Manager</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.Title</field>
                <operation>startsWith</operation>
                <value>Operations Manager</value>
            </filterItems>
            <filterItems>
                <field>User.Title</field>
                <operation>startsWith</operation>
                <value>Locality Manager</value>
            </filterItems>
            <infoMessage>The responsible Operations Manager</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Development_Records1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PartnerType__c</fullName>
        <description>Change 411, changed from look up on account to a list of partner types</description>
        <inlineHelpText>Select the partner organisation that most matches the partner you are planning to work with.</inlineHelpText>
        <label>Partner</label>
        <picklist>
            <picklistValues>
                <fullName>Acute Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Age UK/Concern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BME Community Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carers Organisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health and Social Care Trusts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Arts Group (inc theatre/music/art)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Commissioning Groups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NHS Mental Health Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other NHS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Voluntary Sector Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Sector Organisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School/College/University</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This will be replaced with outstanding changes with a standard list of  partners</inlineHelpText>
        <label>zzOldPartner</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>BDR_Partnerships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partnership_Detail__c</fullName>
        <description>Detail and comment about  the partnership</description>
        <inlineHelpText>Describe the name of the partner/s, the role they will play in delivering the service and whether a Memorandum of Understanding or Heads of Terms agreement is in place.  Please ensure you attach a completed partnership risk assessment</inlineHelpText>
        <label>Partnership Detail</label>
        <length>16384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partnership_Status__c</fullName>
        <inlineHelpText>If you will be delivering services in partnership, refer to the partnership working procedures and choose the relevant type. If you are delivering the service/s alone, select None and move on.</inlineHelpText>
        <label>Partnership Status</label>
        <picklist>
            <picklistValues>
                <fullName>Lead Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint Contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Consortium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collaborative Working</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Please_specify__c</fullName>
        <label>Please specify</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Post_Approval_Changes__c</fullName>
        <description>indicates whether there has been significant change since last workflow approval was given</description>
        <inlineHelpText>Significant change is considered to be a change in excessof 5% to either the income or expenditure associated with this BDR</inlineHelpText>
        <label>Changes since last approval</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reasons_Declined__c</fullName>
        <description>Select the reasons the proposal is being declined</description>
        <inlineHelpText>Select the reasons the proposal is being declined</inlineHelpText>
        <label>Reasons Declined</label>
        <picklist>
            <picklistValues>
                <fullName>Generic contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed price too low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capacity to deliver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of suitable partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient funding available</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Recruitment_Required__c</fullName>
        <inlineHelpText>Describe how many staff and/or volunteers you will require to run the service/s and whether these are already in post or will need to be recruited.  Describe the types of staff and/or volunteers you will require</inlineHelpText>
        <label>Any recruitment?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>This data is pulled from the new A2D_Locality Table

FOR REFERENCE
This formula pulls the data from the org table. Previously used. 
IF( CONTAINS(Locality__r.Name, &quot;Locality&quot;) , Locality__r.Parent.Parent.Name , 
IF(CONTAINS(Locality__r.Name,&quot;Area&quot;), Locality__r.Parent.Name, 
IF(CONTAINS(Locality__r.Name, &quot;Region&quot;), Locality__r.Parent.Name, 
IF(CONTAINS(Locality__r.Name, &quot;Local Service Office&quot;), Locality__r.Parent.Parent.Parent.Name, 
&quot;&quot;))))</description>
        <formula>A2D_Locality__r.Region__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Accountant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Accountant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BDRAccountant</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reporting_Implications__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reporting Implications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required_Approval_Level__c</fullName>
        <description>See Approved Alzheimer&apos;s Society Schedule of Delegated Authorities for Service Contract Income on Arena</description>
        <inlineHelpText>Select the required approval level based on the value of the income in this BDR. If there is no income, your Regional Operations Manager is the highest required approval level.</inlineHelpText>
        <label>Required Approval Level</label>
        <picklist>
            <picklistValues>
                <fullName>Operations Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Operations Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director of Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint CEO &amp; Director of Corporate Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 from Chairman, Treasurer, Vice Chair, CEO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SIM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SIM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BDRSIM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Specifications__c</fullName>
        <label>Service Specifications</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Types__c</fullName>
        <label>Service Types</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of the business development record</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsuccessful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strategic_objectives_met__c</fullName>
        <inlineHelpText>Select the ambition that is most appropriate to the activity that you are proposing.</inlineHelpText>
        <label>Strategic ambition met</label>
        <picklist>
            <picklistValues>
                <fullName>Service Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Reach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaigning</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <description>Brief description of the business. Use ASTOR as a tool:
Aims, Settings, Target group, Objectives (and service outputs to achieve them), Resources needed</description>
        <inlineHelpText>Enter a description of the proposed service/s including what it is, when it will be run, how often it will be run and how you expect it to be funded</inlineHelpText>
        <label>Summary overview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sustainability__c</fullName>
        <inlineHelpText>How will you keep the service running once the initial funding has expired? Will you need additional funding? Will you start charging service users?</inlineHelpText>
        <label>Sustainability</label>
        <length>16384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tender__c</fullName>
        <inlineHelpText>Is there a Tender of any sort involved ?</inlineHelpText>
        <label>Tender</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Value__c</fullName>
        <description>An estimate of the income required to fund the services</description>
        <inlineHelpText>Enter an estimate of the total income required to fund  all the services associated with the  BDR.</inlineHelpText>
        <label>Estimated Income Required</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tupe_Detail__c</fullName>
        <inlineHelpText>Please include any detail here which will help HR to understand the support you are likely to need from them.</inlineHelpText>
        <label>Tupe Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tupe__c</fullName>
        <inlineHelpText>If no TUPE implications leave as None. If a tender is likely to involve staff transferring to AS, choose TUPE in. If we have staff in post who might move to a new funder if we are unsuccessful, choose TUPE out.</inlineHelpText>
        <label>Tupe</label>
        <picklist>
            <picklistValues>
                <fullName>Tupe In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tupe Out</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volunteer_Recruitment__c</fullName>
        <label>zzAny volunteer recruitment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>BDR</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BDR_Name__c</columns>
        <columns>Region__c</columns>
        <columns>Area__c</columns>
        <columns>A2D_Locality__c</columns>
        <columns>Status__c</columns>
        <columns>Income_Source__c</columns>
        <columns>Total_Value__c</columns>
        <columns>Component_List__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All BDRs</label>
    </listViews>
    <listViews>
        <fullName>Board_of_Trustee_Approval</fullName>
        <filterScope>Queue</filterScope>
        <label>Board of Trustee Approval</label>
        <queue>Board_of_Trustee_Approval</queue>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Chief_Executive</fullName>
        <filterScope>Queue</filterScope>
        <label>Chief Executive</label>
        <queue>Chief_Executive</queue>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Director_Corp_Resources</fullName>
        <filterScope>Queue</filterScope>
        <label>Director Corp Resources</label>
        <queue>Director_Corp_Resources</queue>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Director_of_Operations</fullName>
        <filterScope>Queue</filterScope>
        <label>Director of Operations</label>
        <queue>Director_of_Operations</queue>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Legal_Approvals</fullName>
        <filterScope>Queue</filterScope>
        <label>Legal Approvals</label>
        <queue>Legal_Approvals</queue>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
</CustomObject>